[package]
name = "nba_news_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
anyhow = "1.0.79"
env_logger = "0.11.2"
futures = "0.3.30"
http-cache-reqwest = { version = "0.13.0", features = ["manager-moka"] }
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = "0.11.24"
reqwest-middleware = "0.2.4"
schemars = { package = "apistos-schemars", version = "0.8" }
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
